navbar collapse error resolved

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <span class="Logo px-5"><img src="/Pages/images (1).png" alt=""  width="60" height="50" >
             Firebase Form</span>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
